# GabrielGraph

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
notebooks/: GabrielGraph_notebook.ipynb
src/gabrielgraph/: __init__.py  _gabrielgraph.py
src/gabrielgraph/_tests/: test_module.py
