[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GabrielGraph"
version = "0.0.6"
description = "A small class to create Gabriel Graphs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Leo Guignard", email = "leo.guignard@univ-amu.fr" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy>=1.8",
]

[project.urls]
Homepage = "https://github.com/GuignardLab/GabrielGraph"
"Bug Tracker" = "https://github.com/GuignardLab/GabrielGraph/issues"
Documentation = "https://github.com/GuignardLab/GabrielGraph#README.md"
"Source Code" = "https://github.com/GuignardLab/GabrielGraph"
"User Support" = "https://github.com/GuignardLab/GabrielGraph/issues"

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79


[tool.bumpver]
current_version = "0.0.6"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/gabrielgraph/__init__.py" = [
    '__version__ = "{version}"',
]
